Fix layout issues on small screen devices

--- a/assets/components/directDebit/directDebitPopUpForm/directDebitPopUpForm.scss
+++ b/assets/components/directDebit/directDebitPopUpForm/directDebitPopUpForm.scss
@@ -24,14 +24,17 @@
 .component-direct-debit-pop-up-form__content {
   position: relative;
   display: inline-block;
-  top: 50%;
-  width: 345px;
+  width: 305px;
   padding: 10px;
+  @include mq($from: mobileMedium){
+    width: 345px;
+  }
   @include mq($from: mobileLandscape) {
     width: 475px;
+    top: 50%;
+    transform: translateY(-50%);
   }
   min-height: 566px;
-  transform: translateY(-50%);
   background-color: gu-colour(garnett-neutral-3);
   text-align: left;
   border-top: 1px solid gu-colour(garnett-neutral-1);
@@ -43,7 +46,10 @@
   font-weight: bolder;
   font-size: 24px;
   line-height: 30px;
-  max-width: 280px;
+  max-width: 260px;
+  @include mq($from: mobileMedium){
+    max-width: 280px;
+  }
   @include mq($from: mobileLandscape) {
     max-width: 400px;
   }
@@ -70,5 +76,5 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background:transparent;
+  background:rgba(0,0,0,0.6);
 }
